# STplotVarCommon

./: CMakeLists.txt  README.md  plotinterface.h  readwritedevice.h  settingsabstract.h  stplotpluginloader.h  varchannel.cpp  varchannel.h  varcommon.c  varcommon.h  varreaderinterface.h
ReadManager/: readloop.cpp  readloop.h  readmanager.cpp  readmanager.h
ReadWriteDevice/: fimesavereaddevice.cpp  fimesavereaddevice.h  readwritedevice.h  shnet_socket_device.cpp  shnet_socket_device.h  stlinkdevice.cpp  stlinkdevice.h  stmstudiofiledevice.cpp  stmstudiofiledevice.h
SimpleReader/: simplereader.cpp  simplereader.h
VarChannel/: varchannel.cpp  varchannel.h
VarView/: varview.cpp  varview.h
ViewManager/: plotinterface.h  plotwidgetabstract.h
